example/10-output-jwt-policy-full.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/jwt-example, service httpbin
  creationTimestamp: null
  name: jwt-example-httpbin
  namespace: foo
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/jwt-example, service httpbin
  creationTimestamp: null
  name: jwt-example-httpbin
  namespace: foo
spec:
  jwtRules:
  - audiences:
    - test1
    - test2
    fromHeaders:
    - name: other-header
    fromParams:
    - jwt_token
    issuer: testing@secure.istio.io
    jwks: '{ "keys":[ {"e":"AQAB","kid":"DHFbpoIUqrY8t2zpA2qXfCmr5VO5ZEr4RzHU_-envvQ","kty":"RSA","n":"xAE7eB6qugXyCAG3yhh7pkDkT65pHymX-P7KfIupjf59vsdo91bSP9C8H07pSAGQO1MV_xFj9VswgsCg4R6otmg5PV2He95lZdHtOcU5DXIg_pbhLdKXbi66GlVeK6ABZOUW3WYtnNHD-91gVuoeJT_DwtGGcp4ignkgXfkiEm4sw-4sfb4qdt5oLbyVpmW6x9cfa7vs2WTfURiCrBoUqgBo_-4WTiULmmHSGZHOjzwa8WtrtOQGsAFjIbno85jp6MnGGGZPYZbDAa_b3y5u-YpW7ypZrvD8BgtKVjgtQgZhLAGezMt0ua3DRrWnKqTZ0BJ_EyxOGuHJrLsn00fnMQ"}]}'
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/jwt-example, service httpbin
  creationTimestamp: null
  name: jwt-example-httpbin
  namespace: foo
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
    to:
    - operation:
        paths:
        - /base64*
  - from:
    - source:
        notRequestPrincipals:
        - '*'
    to:
    - operation:
        notPaths:
        - /base64/exclude
  selector:
    matchLabels:
      app: httpbin

---
