example/9-output-both-mtls-jwt.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/jwt-example, service httpbin
  creationTimestamp: null
  name: jwt-example-httpbin
  namespace: foo
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/jwt-example, service httpbin
  creationTimestamp: null
  name: jwt-example-httpbin
  namespace: foo
spec:
  jwtRules:
  - issuer: testing@secure.istio.io
    jwksUri: https://raw.githubusercontent.com/istio/istio/release-1.4/security/tools/jwt/samples/jwks.json
  selector:
    matchLabels:
      app: httpbin

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    security.istio.io/alpha-policy-convert: converted from alpha authentication policy
      foo/jwt-example, service httpbin
  creationTimestamp: null
  name: jwt-example-httpbin
  namespace: foo
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
  selector:
    matchLabels:
      app: httpbin

---
